# damin2025

./: .gitignore  README.md  environment.yml  pyproject.toml
lecture01/: README.md
lecture02/: README.md  ex01_first_python_program.py  ex02_first_jupyter_notebook.ipynb  ex03_basic_python_syntax.ipynb  ex04_variables_and_assignment.ipynb  ex05_basic_strings_operations.ipynb  ex06_simple_input_output.ipynb  ex07_enhanced_input_output.ipynb  ex08_conditional_statements.ipynb  ex09_for_loops.ipynb  ex10_while_loops.ipynb  ex11_using_simple_functions.ipynb  ex12_basic_list_operations.ipynb  ex13_basic_tuple_operations.ipynb  ex14_basic_dictionary_operations.ipynb  ex15_load_csv_file.ipynb  ex16_simple_data_manipulation.ipynb  ex17_basic_statistics.ipynb
lecture03/: README.md  ex01_vector_addition_plot.ipynb  ex02_vector_subtraction_plot.ipynb  ex03_scalar_multiplication_plots.ipynb  ex04_dot_product_plot.ipynb  ex05_dot_product_calculation.ipynb  ex06_cross_product_plot.ipynb  ex07_matrix_addition_subtraction_plot.ipynb  ex08_matrix_multiplication_plot.ipynb  ex09_transpose_matrix.ipynb  ex10_identity_matrix.ipynb  ex11_inverse_matrix.ipynb  ex12_determinant_matrix.ipynb  ex13_substitution_system_equation.ipynb  ex14_elimination_system_equation.ipynb  ex15_matrix_inversion_system_equation.ipynb  ex16_gaussian_elimination_system_equation.ipynb  ex17_rank_matrix.ipynb  ex18_eigenvalues_calculation.ipynb  ex19_eigenvectors_calculation.ipynb  ex20_linear_transformations.ipynb  ex21_composition_transformation.ipynb
lecture04/: README.md  ex01_handling_missing_data.ipynb  ex02_dealing_noisy_data.ipynb  ex03_detecting_outliers.ipynb  ex04_data_integration.ipynb  ex05_normalization_standardization.ipynb  ex06_aggregation_discretization.ipynb  ex07_one_hot_label_enconding.ipynb  ex09_stratified_sampling.ipynb  (+2 more)
(+74 files in other folders)
