[project]
name = "damin2025"
version = "2025.0.1"
description = "A Python development environment used to manage all libraries and packages used in the Data Mining KSD course."
authors = [
    {name = "Fabricio Batista Narcizo", email = "narcizo@itu.dk"}
]
license = {text = "License"}
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.urls]
Homepage = "https://github.com/fabricionarcizo/damin2025"
Documentation = "https://github.com/fabricionarcizo/damin2025/wiki"
Repository = "https://github.com/fabricionarcizo/damin2025.git"
Issues = "https://github.com/fabricionarcizo/damin2025/issues"

[tool.poetry]
name = "damin2025"
version = "2025.0.1"
description = "A Python development environment used to manage all libraries and packages used in the Data Mining KSD course."
authors = ["Fabricio Batista Narcizo <narcizo@itu.dk>"]
license = "License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dvc-s3 = "^3.2.0"
easygui = "^0.98.3"
kagglehub = "^0.3.1"
keras = "^3.5.0"
kneed = "^0.8.5"
lightning = "^2.4.0"
lmfit = "^1.3.2"
mlxtend = "^0.23.3"
notebook = "^7.2.2"
opencv-python = "^4.10.0.84"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pylint = "^3.3.1"
pyqtgraph = "^0.13.7"
PyQt6 = "^6.7.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
sklearn-som = "^1.1.0"
squarify = "^0.4.4"
wordcloud = "^1.9.3"
torchvision = "^0.23.0"
torchviz = "^0.0.3"
dash = "^3.2.0"
dlib = "^20.0.0"
librosa = "^0.11.0"
plotly = "^6.3.0"
mediapipe = "^0.10.21"
matplotlib = ">=3.9.0,<=3.10"
ydata-profiling = "^4.16.1"
onnx = "^1.19.0"
keras2onnx = "^1.7.0"
onnxmltools = "^1.14.0"
tensorflow = "==2.19.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
